<resources>
    <string name="app_name">IE209.J1_Project</string>
    <string name="ten_hs">ten</string>
    <string name="gioitinh">gt</string>
    <string name="diachi">diachi</string>
    <string name="soluong_hsnam">Nam: 40</string>
    <string name="si_so_lop">Sỉ số: 100</string>
    <string name="ten_lop">10A1</string>
    <string name="si_so_hsnu">Nữ: 40</string>
    <string name="danh_sach_lop">DANH SÁCH LỚP</string>
    <string name="ngaysinh">ngaysinh</string>
    <string name="mshs">mshs</string>
    <string name="dongy">ĐỒNG Ý</string>
    <string name="cancel">HỦY BỎ</string>
    <string name="sansang">Sẵn Sàng</string>
    <string name="daday">Đã Đầy</string>

    ///String bottom nav
    <string name="tenlop">Tên Lớp</string>
    <string name="trangchu">Trang chủ</string>
    <string name="themmoi">Thêm mới</string>
    <string name="caidat">Cài đặt</string>
    <string name="nhapdiem">Nhập điểm</string>
    <string name="baocao">Báo cáo</string>
    <string name="chon_mon_hoc">Chọn Môn Học</string>
    <string name="button_cencel">CENCEL</string>
    <string name="button_OK">OK</string>
    <string name="chon_hocky">Chọn Học Kỳ</string>


    // List for Lop Spinner
    <string-array name="DSLop">
        <item>10A</item>
        <item>10B</item>
        <item>11A</item>
        <item>11B</item>
        <item>12A</item>
        <item>12B</item>
    </string-array>

    // List for Hoc Ky Spinner
    <string-array name="DSMonHoc">
        <item>Toán</item>
        <item>Lý</item>
        <item>Hóa</item>
        <item>Ngữ văn</item>
        <item>Tiếng Anh</item>
    </string-array>


    // List for Hoc Ky Spinner
    <string-array name="DSHocKy">
        <item>HK1</item>
        <item>HK2</item>
    </string-array>

    // List for Hoc Ky Spinner
    <string-array name="DSNamHoc">
        <item>2016 - 2017</item>

    </string-array>

    // List for Hoc Ky Spinner
    <string-array name="DSLoaiDiem">
        <item>Miệng</item>
        <item>15 phút</item>
        <item>1 tiết</item>
        <item>Học kỳ</item>
    </string-array>

</resources>
