<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_danhsachhs"
    android:layout_width="wrap_content"
    android:layout_height="110dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:background="@color/background_layout"
    android:clickable="true"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="3dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">


    <ImageView
        android:id="@+id/img_hs"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="7dp"
        android:clickable="true"
        android:src="@drawable/if_male3_403019" />


    <TextView
        android:id="@+id/txt_tenhs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:clickable="true"

        android:text="@string/ten_hs"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_gioitinh"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/txt_tenhs"
        android:layout_marginLeft="80dp"
        android:adjustViewBounds="true"
        android:maxWidth="25dp"
        android:maxHeight="25dp"
        android:paddingTop="10dp"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/txt_gioitinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_tenhs"
        android:layout_marginLeft="100dp"
        android:paddingTop="10dp"
        android:text="@string/gioitinh"
        android:textSize="13dp" />

    <ImageView
        android:id="@+id/img_ngaysinh"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/txt_gioitinh"
        android:layout_marginLeft="180dp"
        android:adjustViewBounds="true"

        android:maxWidth="25dp"
        android:maxHeight="25dp"
        android:paddingTop="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/calendar" />

    <TextView
        android:id="@+id/txt_ngaysinh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_tenhs"
        android:layout_marginLeft="200dp"
        android:paddingTop="10dp"
        android:text="@string/ngaysinh"
        android:textSize="13dp" />

    <ImageView
        android:id="@+id/img_diachi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_gioitinh"
        android:layout_marginLeft="80dp"
        android:adjustViewBounds="true"
        android:maxWidth="25dp"
        android:maxHeight="25dp"
        android:paddingTop="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/placeholder" />

    <TextView
        android:id="@+id/txt_diachi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_gioitinh"
        android:layout_marginLeft="100dp"
        android:paddingTop="10dp"
        android:text="@string/diachi"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/txt_mshs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_hs"
        android:layout_marginLeft="8.5dp"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:text="@string/mshs"
        android:textSize="13dp"


        />


</RelativeLayout>






