<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_chonhocky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chon_mon_hoc"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="25dp"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="190dp">

                <ListView  android:id="@android:id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                </ListView>

                <TextView  android:id="@android:id/empty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Không có gì cả" />        ///tu dong thong bao khi khong co data trong listview

            </ScrollView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <Button
                android:id="@+id/btn_Cencel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/button_cencel"/>

            <Button
                android:id="@+id/btn_Ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:text="@string/button_OK"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>